# fastapi-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/db/: init_db.py
app/models/: project.py  task.py  user.py
app/routers/: auth.py  projects.py  reports.py  tasks.py  users.py
app/schemas/: project.py  report.py  task.py  user.py
app/tests/: conftest.py  test_auth.py  test_projects.py  test_reports.py  test_tasks.py  test_users.py
